--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before:install:
     - docker build -t gtdelgado/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run gtdelgado/react-test npm test -- --coverage
+    - docker run -e CI=true gtdelgado/test-docker-react npm run test
 
 after_success:
     - docker build -t gtdelgado/multi-client ./client
