--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+
 sudo: required
 services:
     - docker
@@ -18,4 +19,15 @@ after_success:
     - docker push gtdelgado/multi-nginx
     - docker push gtdelgado/multi-server
     - docker push gtdelgado/multi-worker
-    
+
+deploy:
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-065140640797
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
